# langgraph-agent-template

./: README.md  SETUP.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  SETUP.md  examples.py  langgraph.json  main.py  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/agent/: __init__.py  graph.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/prompts/: __init__.py  prompts.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/states/: __init__.py  state.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/tests/: conftest.py  test_agent.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/tools/: __init__.py  data_source.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: __init__.py  credentials.py
