[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    # Core LangGraph ecosystem
    "langgraph>=1.0.8",
    "langgraph-api>=0.6.39",
    "langgraph-cli>=0.4.11",
    "langsmith>=0.5.2",

    # Core LangChain components
    "langchain-core>=1.2.5",
    "langchain>=1.2.0",
{%- if cookiecutter.llm_provider == "google_gemini" %}
    "langchain-google-genai>=0.0.1",
{%- elif cookiecutter.llm_provider == "openai" %}
    "langchain-openai>=0.3.0",
{%- endif %}

    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/{{ cookiecutter.package_name }}/tests"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
